# SPIRV-LLVM-Translator

./: .clang-tidy  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CPack.llvm-spirv.description.txt  LLVMSPIRVLib.pc.in  README.md  console.js  spirv-headers-tag.conf
test/: AlignmentId.spvasm  AllowIntrinsics.ll  AtomicBuiltinsFloat.ll  AtomicCompareExchange.ll  AtomicCompareExchangeExplicit.ll  AtomicCompareExchange_cl12.ll  AtomicCompareExchange_cl20.ll  AtomicExchange.ll  AtomicFAddEXTForOCL.ll  AtomicFAddExt.ll  AtomicFMaxEXT.ll  AtomicFMaxEXTForOCL.ll  AtomicFMinEXT.ll  AtomicFMinEXTForOCL.ll  CMakeLists.txt  CheckCapKernelWithoutKernel.ll  ComparePointers.cl  ContractionON.ll  ContractionOff.ll  CreatePipeFromPipeStorage.ll  EnqueueEmptyKernel.ll  ExecutionMode.ll  ExecutionMode_SPIR_to_SPIRV.ll  ExtendBitBoolArg.ll  FOrdGreaterThanEqual_bool.ll  FOrdGreaterThanEqual_int.ll  FPFastMathModeNotNaNFast.spvasm  FortranArray.ll  GEPOperator.spvasm  GroupAndSubgroupInstructions.spvasm  IR_passthrough.ll  IntelFPGAMemoryAttributes.ll  IntelFPGAMemoryAttributesForStruct.ll  InternalConstantPrivateGlobal.ll  InvalidAtomicBuiltins.cl  MaxByteOffsetId.spvasm  OpBitcast_ptr_scalar.spvasm  OpBitcast_ptr_vector.spvasm  OpConstantNull.spvasm  OpConvertPtrToU_narrowing.spvasm  (+254 more)
test/CXX/: global-ctor.cl
test/DebugInfo/: DebugControlFlow.cl  DebugFunction.cl  DebugFunction.ll  DebugFunctionDeclarationBug.cl  DebugInfo-GV-with-DIE.ll  DebugInfo-GV-with-DIE.spt  DebugInfo-GV-with-SMD-and-DIE.ll  DebugInfoChecksum.ll  DebugInfoChecksumCompileUnit.ll  DebugInfoGlobalVariableNone.spvasm  DebugInfoLLVMArg.ll  DebugInfoLexicalBlockDependency.ll  DebugInfoLowerBound.ll  DebugInfoNoneEntity.ll  DebugInfoProducer.ll  DebugInfoStringType.ll  DebugInfoSubrange.ll  DebugInfoSubrangeWithOnlyCount.spt  DebugInfoTypeBasic.ll  DebugInfoTypeInheritance.ll  DebugInfoUnsupported.ll  DebugInfoWithUnknownIntrinsics.ll  DebugMacroDef.ll  DebugMacroDefNoValue.ll  DebugMacroDefRoot.ll  DebugMacroUndefinedUndef.ll  DebugTypeMember.ll  DebugTypeMember.spvasm  DebugUnstructuredControlFlow.cl  DebugValueInvalid.ll  IncorrectInstructionEnumerationSPIRVtoLLVM.spvasm  InvalidSourceLanguageSPIRVtoLLVM.spvasm  LocalAddressSpace.ll  RecursiveDebugInfo.ll  RelativeSrcPath.ll  SourceLanguageLLVMToSPIRV.ll  SourceLanguageSPIRVToLLVM.spvasm  TransTypeCompositeCaseClass_.ll  UnknownBaseType.ll  bitfields_packed.ll  (+8 more)
test/OpenCL.std/: acos.spvasm  printf.spvasm  upsample.spvasm  vload_half.spvasm  vload_halfn.spvasm  vloada_halfn.spvasm  vloadn.spvasm  vstore_half.spvasm  vstore_halfn.spvasm  vstorea_halfn.spvasm  vstoren.spvasm
test/OpenCLCXX/: empty.ll  linkonceodr.ll  sin.ll
test/Opencl/: get_global_offset.ll
test/SpecConstants/: OpSpecConstantComposite.spvasm  bool-spirv-specconstant.ll  keep-tracked-const.ll  spec-constant-length-array.ll  specconstantop-arraylength.spvasm  specconstantop-copymemsized.spvasm  specconstantop-init.spvasm
test/branching/: OpSwitchBranches.ll  OpSwitchChar.ll  OpSwitchUnreachable.ll  Two_OpSwitch_same_register.ll  switch-range-check.ll
test/constant/: global-constants.ll  local-aggregate-constant.ll  local-float-point-constants.ll  local-integers-constants.ll  local-null-constants.ll
test/function/: alloca-load-store.ll  identity-function.ll  multiple-anonymous-functions.ll  trivial-function-definition.ll  trivial-function-with-call.ll
test/instructions/: alloca.ll  icmp.ll  ptrcmp.ll  scalar-bitwise-operations.ll  scalar-integer-arithmetic.ll  select.ll  vector-bitwise-operations.ll  vector-floating-point-arithmetic.ll  vector-integer-arithmetic.ll
test/llvm-intrinsics/: abs.ll  add_sub.sat.ll  assume.ll  bitreverse.ll  bitreverse_small_type.ll  bswap.ll  ceil.ll  constrained-arithmetic.ll  constrained-comparison.ll  constrained-convert.ll  ctlz.ll  ctpop.ll  cttz.ll  dynamic-memmove.ll  expect.ll  experimental.noalias.scope.decl.ll  fabs.ll  fmuladd-cl-mad-enable.ll  fmuladd.ll  fmuladdv1f.ll  fp-intrinsics.ll  fp-vector-intrinsics.ll  fp_to_arbitrary_size_int_intrinsic.ll  fp_to_int_intrinsic.ll  fpclass.ll  frexp.ll  fshl.ll  fshr.ll  instrprof.ll  invariant.ll  ldexp.ll  lifetime.ll  llvm.umul.with.overflow.ll  llvm.vector.reduce.ll  maxnum.ll  memcpy.align.ll  memmove.ll  memset-align.ll  memset-entry-point-interface.ll  memset-opaque.ll  (+16 more)
test/negative/: InvalidAtomicBuiltins.cl  feature_requires_minversion.ll  frexp_unsupported_signature.ll  group-decorate.spt  invalid-vloada-half.ll  invalid-wordcount-constant.spt  invalid-wordcount-iadd.spt  invalid-wordcount.spt  llvm-unhandled-intrinsic.ll  malformed-invalid-opcode-function-scope.spvasm  malformed-multiple-unknown-opcodes.spvasm  malformed-truncated-instruction.spvasm  malformed-unknown-opcode-function-body.spvasm  malformed-unknown-opcode-module-scope.spvasm  memmove.with.phinode.src.ll  spirv_invalid_word_count.ll  spirv_report_bad_input.spt  unsupported_vararg_func.ll  word_count_limit.ll
test/transcoding/: AllowIntrinsics.ll  AtomicBuiltinsFloat.ll  AtomicCompareExchangeExplicit_cl20.cl  AtomicCompareExchangeExplicit_cl20.ll  AtomicCompareExchange_cl12.ll  AtomicCompareExchange_cl20.ll  AtomicFAddEXT.ll  AtomicFAddEXTForOCL.ll  AtomicFMaxEXT.ll  AtomicFMaxEXTForOCL.ll  AtomicFMinEXT.ll  AtomicFMinEXTForOCL.ll  AtomicFSubEXTForOCL.ll  BitReversePref.ll  BuildNDRange.ll  BuildNDRange_2.ll  BuiltinPrintf.cl  CommonAddrspaceGlobalVar.ll  ConvertPtr.cl  CreatePipeFromPipeStorage.ll  DecorationAlignment.ll  DecorationMaxByteOffset.ll  DivRem.cl  ExecutionMode_SPIR_to_SPIRV.ll  FPGABufferLocation.ll  FPGAIVDepLoopAttr.ll  FPGALoopAttr.ll  FPGALoopMergeInst.ll  FPGAUnstructuredLoopAttr.ll  ForwardPtr.ll  GenericCastToPtr.cl  GlobalFunAnnotate.ll  InfiniteLoopMetadataPlacement.ll  IntelFPGAMemoryAccesses.ll  IntelFPGAMemoryAttributes.ll  IntelFPGAMemoryAttributesForStaticVar.ll  IntelFPGAMemoryAttributesForStruct.ll  IntelFPGAReg.ll  KernelArgTypeInOpString.ll  KernelArgTypeInOpString2.ll  (+208 more)
test/type-scavenger/: call.ll  globals.ll  load-indirect.ll  opaque_pointers.ll  ptr-abuse.ll  recursive-type.ll
(+826 files in other folders)
